add HW3 .html and .js

--- a/hw2.html
+++ b/hw2.html
@@ -13,7 +13,7 @@
     <link href='owl.carousel.css'rel='stylesheet' type='text/css'> 
     <link href='magnific-popup.css' rel='stylesheet' type='text/css'>
     <link href='animate.css' rel='stylesheet' type='text/css'>    
-    <link href='stylehw2.css' rel='stylesheet' type='text/css'>
+    <link href='style_answer.css' rel='stylesheet' type='text/css'>
 	
 </head>
  
@@ -31,7 +31,7 @@
                <ul>
                    <li><a href="hw1.html">homework 1</a></li>
                    <li><a href="hw2.html">homework 2</a></li>
-                   <li><a href="#">homework 3</a></li>
+                   <li><a href="HW3.html">homework 3</a></li>
                    <li><a href="#">homework 4</a></li>
                    <li><a href="#">homework 5</a></li>
                    <li><a href="#">homework 6</a></li>
@@ -42,9 +42,7 @@
   
 </nav>
 </header>
- 
- <div class="dark-blue" id="blue"></div>
-  
+   
 <body>
        <section id="content-home">
            	<div class="container">
@@ -165,9 +163,8 @@
                                             <input type="text" id="answer3_number4">
                                             <input type="text" id="answer3_number5">
 
-                                            <button onClick="processNumbers();" id="submitNumbers">Process</button>
-                                            <br/>
-                                            <button id="fadeNumbers">Click to Fade Results</button>
+                                            <button onClick="processNumbers();" id="submitNumbers">Process</button><br>
+                                            <button id="fadeNumbers">Click to Fade Results</button><br>
 
                                             <textarea style="width:80%" id="display"></textarea>
                                             <script>
@@ -267,21 +264,21 @@
            
     </section>
            
-           <section id="footer section-padding">
-              <div class="container">
-                   <div class="row">
-                   <div class="col-sm-12 text-center">
-                       <div id="lastupdate">
-                           <script>
+    <section id="footer section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <div id="lastupdate">
+                        <script>
                             var dateModified = document.lastModified;
                             mydate = dateModified.slice(0,16);
                             document.write("Last updated: " + mydate);
-                           </script>
-                           <p class="small">created by Phraew P. (Patty)</p>
-                        </div>
+                        </script>
+                        <p class="small">created by Phraew P. (Patty)</p>
                     </div>
-                    </div>
+                </div>
             </div>
+        </div>
     </section>   
 <script src="custom.js" type="text/javascript"></script>
 <script src="HW2.js" type="text/javascript"></script>
