--- a/hw1.html
+++ b/hw1.html
@@ -1,60 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link href='style.css' rel='stylesheet' type='text/css'>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>CNIT133: Homework 1 </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CNIT133: Homework 1</title>
+<!--bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!--JQuery-->
+<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>    
+<!--fontawesome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<!--cssstlyesheet-->
+    <link href='owl.carousel.css'rel='stylesheet' type='text/css'> 
+    <link href='magnific-popup.css' rel='stylesheet' type='text/css'>
+    <link href='animate.css' rel='stylesheet' type='text/css'>    
+    <link href='style.css' rel='stylesheet' type='text/css'>
+	
 </head>
  
 
- <header>
+<header>
+   <div class="hamburger-icon" id="icon">
+       <div class="icon-1" id="a"></div>
+       <div class="icon-2" id="b"></div>
+       <div class="icon-3" id="c"></div>
+       <div class="clear"></div>
+    </div>
   
-  <div class="hamburger-icon" id="icon">
-    <div class="icon-1" id="a"></div>
-    <div class="icon-2" id="b"></div>
-    <div class="icon-3" id="c"></div>
-    <div class="clear"></div>
-  </div>
+<nav id="nav">
+           <div class="navbar"> 
+               <ul>
+                   <li><a href="hw1.html">homework 1</a></li>
+                   <li><a href="hw2.html">homework 2</a></li>
+                   <li><a href="HW3.html">homework 3</a></li>
+                   <li><a href="#">homework 4</a></li>
+                   <li><a href="#">homework 5</a></li>
+                   <li><a href="#">homework 6</a></li>
+                   <li><a href="#">homework 7</a></li>
+                   <li><a href="#">homework 8</a></li>
+                </ul>
+            </div>
   
-    <nav id="nav">
-        <div class="navbar"> 
-            <ul>
-                <li><a href="hw1.html">homework 1</a></li>
-                <li><a href="hw2.html">homework 2</a></li>
-                <li><a href="#">homework 3</a></li>
-                <li><a href="#">homework 4</a></li>
-                <li><a href="#">homework 5</a></li>
-                <li><a href="#">homework 6</a></li>
-                <li><a href="#">homework 7</a></li>
-                <li><a href="#">homework 8</a></li>
-            </ul>
-        </div>
-  
-  </nav>
+</nav>
 </header>
-  
-  <div class="dark-blue" id="blue"></div>
-  
-<body> 
    
-    <section class="content-home">
-        <h3>CNIT 133: JavaScript</h3>
-        <p>fall 2016</p>
-        <h1>Homework 1:<br>Homework Pages</h1>
-        <p>Create a web page, using HTML5, CSS, and JavaScript</p>
-        <p class="small">created by Phraew P. (Patty)</p>
-    </section>
-    
-</body>    
-
-
-<p id="lastupdate"></p>
-    <script>
-    function myFunction() {
-        var x = new Date(document.lastModified);
-        document.getElementById("lastupdate").innerHTML = x;
-    }
-    </script>
-
+<body>
+       <section id="content-home">
+           	<div class="container">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2 text-center">
+                        <div class="section-heading heading-padding">
+                            <h3>CNIT 133: JavaScript</h3>
+                            <p>fall 2016</p>
+                            <h1>Homework 1:<br>Create Homework Page</h1>
+                        </div>
+                    </div>
+               </div>
+            </div>
+        </section>
+           
+        <section id="footer section-padding">
+            <div class="container">
+                <div class="row">
+                   <div class="col-sm-12 text-center">
+                       <div id="lastupdate">
+                           <script>
+                            var dateModified = document.lastModified;
+                            mydate = dateModified.slice(0,16);
+                            document.write("Last updated: " + mydate);
+                           </script>
+                           <p><br><br>created by Phraew P. (Patty)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>   
 <script src="custom.js" type="text/javascript"></script>
+</body>
 </html>
