--- a/hw4.html
+++ b/hw4.html
@@ -131,8 +131,8 @@
 			                    <div class="global-modal_contents modal-transition">
                                     <div class="global-modal-header">
 			                            <span class="mobile-close"> X </span>			       
-			                            <p> 1a: Create a webpage that contains a script, using the for statement, that calculates the product and sum of every third integer from 5 to 20 inclusive and then displays the results, along with some accompanying text.
-                                        <br> 1b: On the same webpage as Part 1a, create a script, using the while or do while statement, that calculates the product and sum of every fourth integer from 3 to 31 inclusive and then displays the results, along with some accompanying text.</p>
+			                            <p> 1a: The script, using the for statement, that calculates the product and sum of every third integer from 5 to 20 inclusive and then displays the results, along with some accompanying text.
+                                        <br> 1b: Create a script, using the while or do while statement, that calculates the product and sum of every fourth integer from 3 to 31 inclusive and then displays the results, along with some accompanying text.</p>
                                     </div>
                                         <div class="global-modal-body">
                                             <p id="part1answer1"></p><br><p id="part1answer2"></p>
@@ -148,7 +148,7 @@
 			                    <div class="global-modal_contents modal-transition">
                                     <div class="global-modal-header">
 			                            <span class="mobile-close"> X </span>
-			                            <p>A large company pays its salespeople on a commission basis. The salespeople receive $200 per week, plus 9% of their gross sales for that week. For example, a salesperson who sells $5000 worth of merchandise in a week receives $200 plus 9% of $5000, or a total of $650. You have been supplied with a list of the items sold by each salesperson. The value of these items are as follows:p>
+			                            <p>The script will determine the gross pay for each of six employees. The company pays "straight time" for the first 40 hours worked by each employee and pays "time and a half" for all hours worked in excess of 40 hours. You are given a list of the employees of the company, the number of hours worked last week and the hourly rate of each employee. Your script should input this information for each employee, determine the employee's gross pay and then displays the employee's gross pay. Be sure to round the outputted results to 2 decimal places. You should also check for valid input and right-justify all amounts. Use form text boxes to input the data<p>
                                     </div>
                                     <div class="global-modal-body">
                                         <form name="salary">
@@ -202,14 +202,12 @@
 			                    <div class="global-modal_contents modal-transition">
                                     <div class="global-modal-header">
 			                            <span class="mobile-close"> X </span>
-			                            <p>Create a webpage containing a script that will determine whether a department-store customer has exceeded the credit limit on their charge account. 
-			                            <br>For input, the following facts should be available in form input text boxes:
-			                            <br> a) Account number
-                                        <br> b) Balance at the beginning of the month
-                                        <br> c) Total of all items charged by this customer this month
-                                        <br> d) Total of all credits applied to this customer's account this month
-                                        <br> e) Allowed credit limit
-                                        <br>Validate whether the account number has been entered and that the amount items are numeric. If there is an error then display an error message using an alert, innerHTML, or jQuery.</p>
+			                            <p>Calculate compound interest on a principal of $1000 with annual interest rates between 5 to 10% for a period between 1 to 10 years. 
+			                            <br> The formula used is: A=P(1 +r) n
+                                        <br> &sdot; P is the principal
+                                        <br> &sdot; r is the annual interest rate
+                                        <br> &sdot; n is the number of years the amount is deposited
+                                        <br> &sdot; A is the amount of money (including interest) accumulated after n years</p>
                                     </div>
                                     <div class="global-modal-body">
                                         	<div id="part3container"></div>                  
@@ -222,7 +220,10 @@
 			                    <div class="global-modal_contents modal-transition">
                                     <div class="global-modal-header">
 			                            <span class="mobile-close"> X </span>
-                                        <p>A palindrome is a number or a text phrase that reads the same backward and forward. For example: 12321, 55555, 11611, 45554. Create a webpage that contains a script that inputs a five-digit integer (not starting with zero) that determines and outputs a message stating whether or not it's a palindrome. If the number is not five digits long, display an error message indicating the problem to the user. Utilize jQuery UI for displaying a button that will be used to display the instruction: "Input a five-digit integer (not starting with zero) to display if it is a palindrome, not a palindrome, or an input error."</p>
+                                        <p>A mail-order house sells five different products whose retail prices are as follows: product 1, $2.98, product 2, $4.50, product 3, $9.98, product 4, $4.49, product 5, $6.87. Create a webpage that contains a script that inputs the following:
+
+                                        <br> a) Product number (1 through 5)
+                                        <br> b) Quantity sold for that product - (for the week)</p>
                                     </div>
                                     <div class="global-modal-body">
                                     <form name="sales">
@@ -305,7 +306,10 @@
                       <div id="answer6" class="global-modal">
 			                <div class="overlay"></div>
 			                    <div class="global-modal_contents modal-transition">
-                                    <p id ="12days"></p>
+                                  <div class="global-modal-header">
+                                        <p>Create a webpage that contains a script that uses repetition and switch statements to print the song "The Twelve Days of Christmas". One switch statement should be used to print the day (i.e., "First," "Second," etc.). A separate switch statement should be used to print the remainder of each verse. </p>
+                                        <div id ="12days"></div>
+                                    </div>
 
 	                                   <div id="animate" style="background:#98bf21;height:100px;width:100px;position:relative; margin:0 auto;"><img src="santa.png" style="height:100px;width:100px"></div>
 	                                   
@@ -318,10 +322,7 @@
 			                    <div class="global-modal_contents modal-transition">
                                     <div class="global-modal-header">
 			                            <span class="mobile-close"> X </span>
-                                        <p>Create a webpage using form text boxes that:
-                                        <br>a) contains the function celsius, that returns the Celsius equivalent of a Fahrenheit temperature, using the calculation: C&deg; = 5/9 * (F - 32) 
-                                        <br>b) contains the function fahrenheit that returns the Fahrenheit equivalent of a Celsius temperature, using the calculation: F&deg; = (9/5 * C) + 32
-                                        <br>c) Use these functions to write a script that enables the user to enter either a Fahrenheit or a Celsius temperature and displays the Celsius or Fahrenheit equivalent.</p>
+                                        <p>Creat script that reads in the size of the side of a square and displays a hollow square of that size constructed of asterisks. Your script should work for squares of all side sizes between 2 and 10. Display an error message if the user enters any number that is not between 2 and 10. </p>
                                     </div>
                                     <div class="global-modal-body">                
                                         <form name="makesquare" id="makesquare">
