--- a/hw4.html
+++ b/hw4.html
@@ -137,7 +137,7 @@
                                         <div class="global-modal-body">
                                             <p id="part1answer1"></p><br><p id="part1answer2"></p>
                                     </div>    
-                                            <div class="ui-widget-content draggable">
+                                            <div class="ui-widget-content" id="draggable">
                                                 <p>Drag me around</p>
                                             </div>
                                 </div>
