--- a/HW3.html
+++ b/HW3.html
@@ -33,7 +33,7 @@
                    <li><a href="hw2.html">homework 2</a></li>
                    <li><a href="HW3.html">homework 3</a></li>
                    <li><a href="hw4.html">homework 4</a></li>
-                   <li><a href="#">homework 5</a></li>
+                   <li><a href="hw5.html">homework 5</a></li>
                    <li><a href="#">homework 6</a></li>
                    <li><a href="#">homework 7</a></li>
                    <li><a href="#">homework 8</a></li>
