--- a/hw6.html
+++ b/hw6.html
@@ -38,12 +38,8 @@
                    <li><a href="hw4.html">homework 4</a></li>
                    <li><a href="hw5.html">homework 5</a></li>
                    <li><a href="hw6.html">homework 6</a></li>
-<<<<<<< Updated upstream
-                   <li><a href="#">homework 7</a></li>
-=======
                    <li><a href="hw7.html">homework 7</a></li>
->>>>>>> Stashed changes
-                   <li><a href="#">homework 8</a></li>
+                   <li><a href="hw8.html">homework 8</a></li>
                 </ul>
             </div>
   
