--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                    <li><a href="HW3.html">homework 3</a></li>
                    <li><a href="hw4.html">homework 4</a></li>
                    <li><a href="hw5.html">homework 5</a></li>
-                   <li><a href="#">homework 6</a></li>
-                   <li><a href="#">homework 7</a></li>
-                   <li><a href="#">homework 8</a></li>
+                   <li><a href="hw6.html">homework 6</a></li>
+                   <li><a href="hw7.html">homework 7</a></li>
+                   <li><a href="hw8.html">homework 8</a></li>
                 </ul>
             </div>
   
