--- a/hw7.html
+++ b/hw7.html
@@ -166,60 +166,58 @@
                                     </div>
                                     <div class="global-modal-body">
                                         <form>
-		<p>
-			<label for="password">Password: </label>
-			<input type="password" name="password" id="password">
-		</p>
-		<p>
-			<input type="button"  id="submitBtn" value="SUBMIT" >
-			<input type="reset" value="RESET">
-		</p>
-		</form>
-	</div>
-	<style>
-		#login {
-		width: 300px;
-		margin: 0 auto;
-		z-index: 100;
-		}
+                                            <p>
+                                                <label for="password">Password: </label>
+                                                <input type="password" name="password" id="password">
+                                            </p>
+                                            <p>
+                                                <input type="button"  id="submitBtn" value="SUBMIT" >
+                                                <input type="reset" value="RESET">
+                                            </p>
+                                        </form>
+                                    </div>
+                                        <style>
+                                            #login {
+                                            width: 300px;
+                                            margin: 0 auto;
+                                            z-index: 100;
+                                            }
 
-		#open {
-		margin: 0;
-		cursor: pointer;
-		background-color: #ff9999;
-		color: #FFF;
-		padding: 5px 0 2px 30px;
-		}
+                                            #open {
+                                            margin: 0;
+                                            cursor: pointer;
+                                            background-color: #ff9999;
+                                            color: #FFF;
+                                            padding: 5px 0 2px 30px;
+                                            }
 
-		#login .close {
-		background-color: #2ab7ca; 
-		}
+                                            #login .close {
+                                            background-color: #2ab7ca; 
+                                            }
 
-		#open:hover {
-		color: #FFF;
-		background-color:  #fed766;
-		}
+                                            #open:hover {
+                                            color: #FFF;
+                                            background-color:  #fed766;
+                                            }
 
-		#login form {
-		padding: 10px 10px 10px 10px;
-		display: none; 
-		background-color: #2ab7ca; 
-		}
-		#login label {
-		display: inline-block;
-		width: 100px;
-		text-align:right;
-		color: #FFF;
-		}
-		#login input {
-		font-size: 14px; 
-		}
-	
-	</style>             
+                                            #login form {
+                                            padding: 10px 10px 10px 10px;
+                                            display: none; 
+                                            background-color: #2ab7ca; 
+                                            }
+                                            #login label {
+                                            display: inline-block;
+                                            width: 100px;
+                                            text-align:right;
+                                            color: #FFF;
+                                            }
+                                            #login input {
+                                            font-size: 14px; 
+                                            }
+                                        </style>             
                                    </div>
                                 </div>
-                        </div>
-<!-- answer3 -->                           
+<!-- answer3 -->                        
                         <div id="answer3" class="global-modal">
 			                <div class="overlay"></div>
 			                    <div class="global-modal_contents modal-transition">
@@ -227,33 +225,68 @@
                                         <span class="mobile-close"> X </span>
 			                            <p>Write a script that displays a top navigation bar containing a link to your Homework 1 and five other links that will be to the cover page for each of your Homework2 - Homework6. When you mouseover any of these other links then display a drop-down menu that contains the links of their homework parts (part 1 - 4 or part 1 - 6). If applicable then also include links to any extra credit pages that you have done. Make sure that all links are working. You can use strictly JavaScript or else jQuery. </p>
                                     </div>
-                                    <div class="global-modal-body">
-                                        <div id="accordion">
-                                          <h3>Part 1</h3>
-                                          <div>
-                                            <p>Give users options to change styles on this page</p>
-                                            <a href="#part1">Part1</a>
-                                          </div>
-                                          <h3>Part 2</h3>
-                                          <div>
-                                            <p>Show a password protected page</p>
-                                            <a href="#part2">Part2</a>
-                                          </div>
-                                          <h3>Part 3</h3>
-                                          <div>
-                                            <p>Show a navigation bar using jQuery UI</p>
-                                            <a href="#part3">Part3</a>
-                                          </div>
-                                          <h3>Part 4</h3>
-                                          <div>
-                                            <p>Show a slideshow using FancyBox</p>
-                                            <a href="#part4">Part4</a>
-                                          </div>
-                                        </div>
-      <br><br>
-     <div id="test">
-     </div> 
-                                    </div>
+                                        <div class="global-modal-body">
+                                            <p>Select Homework Assignment</p><br>
+                                         
+                                            <h4 class="bump-space bump-space-bottom">Navigate to these Exercises</h4>
+                                    <ul id="navigation">
+                                        <li><a href="index.html" target="_blank">Homework 1</a></li>
+                                        <li>
+                                            <a href="hw2.html" target="_blank">Homework 2</a>
+                                            <ul>
+                                                <li><a href="hw2.html#answer1" target="_blank">Part 1</a></li>
+                                                <li><a href="hw2.html#answer2" target="_blank">Part 2</a></li>
+                                                <li><a href="hw2.html#answer3" target="_blank">Part 3</a></li>
+                                                <li><a href="hw2.html#answer4" target="_blank">Part 4</a></li>
+                                                <li><a href="hw2.html#answer5" target="_blank">Part 5</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li>
+                                            <a href="HW3.html" target="_blank">Homework 3</a>
+                                            <ul>
+                                                <li><a href="HW3.html" target="_blank">Part 1</a></li>
+                                                <li><a href="HW3.html" target="_blank">Part 2</a></li>
+                                                <li><a href="HW3.html" target="_blank">Part 3</a></li>
+                                                <li><a href="HW3.html" target="_blank">Part 4</a></li>
+                                                <li><a href="HW3.html" target="_blank">Part 5</a></li>
+                                                <li><a href="HW3.html" target="_blank">Part 6</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li>
+                                            <a href="hw4.html" target="_blank">Homework 4</a>
+                                            <ul>
+                                                <li><a href="hw4.html" target="_blank">Part 1</a></li>
+                                                <li><a href="hw4.html" target="_blank">Part 2</a></li>
+                                                <li><a href="hw4.html" target="_blank">Part 3</a></li>
+                                                <li><a href="hw4.html" target="_blank">Part 4</a></li>
+                                                <li><a href="hw4.html" target="_blank">Part 5</a></li>
+                                                <li><a href="hw4.html" target="_blank">Part 6</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li>
+                                            <a href="hw5.html" target="_blank">Homework 5</a>
+                                            <ul>
+                                                <li><a href="hw5.html" target="_blank">Part 1A</a></li>
+                                                <li><a href="hw5.html" target="_blank">Part 1B</a></li>
+                                                <li><a href="hw5.html" target="_blank">Part 2</a></li>
+                                                <li><a href="hw5.html" target="_blank">Part 3</a></li>
+                                                <li><a href="hw5.html" target="_blank">Part 4</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li>
+                                            <a href="hw6.html" target="_blank">Homework 6</a>
+                                            <ul>
+                                                <li><a href="hw6.html" target="_blank">Part 1</a></li>
+                                                <li><a href="hw6.html" target="_blank">Part 2</a></li>
+                                                <li><a href="hw6.html" target="_blank">Part 3</a></li>
+                                                <li><a href="hw6.html" target="_blank">Part 4</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
 <!-- answer4 -->                           
@@ -265,9 +298,10 @@
                                         <p>Create a photo slide-show using jQuery. For an explanation of the Advanced Gallery with jQuery FancyBox</p>
                                     </div>
                                         <div class="global-modal-body">
-                                        <a class="fancybox" rel="group" href="cat.jpg"><img src="cat.jpg" alt="" /></a>
-                                        <a class="fancybox" rel="group" href="giraffe.jpg"><img src="giraffe.jpg" alt="" /></a>
-                                        <a class="fancybox" rel="group" href="dog.jpg"><img src="dog.jpg" alt="" /></a>
+                                        <a class="fancybox" rel="group" href="image/xmas1.jpg"><img src="image/xmas1.jpg" alt="" /></a>
+                                        <a class="fancybox" rel="group" href="image/xmas2.png"><img src="image/xmas2.png" alt="" /></a>
+                                        <a class="fancybox" rel="group" href="image/xmas3.png"><img src="image/xmas3.png" alt="" /></a>
+                                        <a class="fancybox" rel="group" href="image/xmas4.jpg"><img src="image/xmas4.jpg" alt="" /></a>
 
                                         <style>
                                             img{width: 150px; height:100px;}
